fixed the header alignment

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -44,14 +44,28 @@ section {
   border-radius: 24px;
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin: 0 auto;
+}
+
 header {
   height: 100px;
+  width: 100%;
   margin-bottom: 30px;
+  background-color: white;
+  z-index: 10;
+  transition: top 0.3s; /* Smooth transition for the header movement */
+
   nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
   }
 
   ul {
@@ -289,6 +303,13 @@ header {
         padding-block: 15px;
         border: 1px solid #ececec;
         border-radius: 8px;
+        h5 {
+          font-size: 18px;
+          font-weight: 500;
+        }
+        p {
+          color: #858585;
+        }
       }
     }
   }
